<resources>
    <string name="app_name">Cuenta Copas</string>
    <string name="app_menu">Tasa</string>
    <string name="addButton">+</string>
    <string name="dialog_title">No existe Perfil</string>
    <string name="dialog_message">Debes crear primero un perfil, necesitamos edad, peso y altura
        para calcular la tasa de alcoholemia lo mejor posible.</string>
    <string name="dialog_title_eliminar">Eliminar bebida</string>
    <string name="dialog_message_eliminar">¿Desea eliminar esta bebida? \n Ya no podrá recuperarla.</string>

    <string name="menu_perfil">Perfil</string>
    <string name="crear_perfil_btn">Crear perfil</string>
    <string name="menu_bebidas">Bebidas</string>
    <string name="menu_addbebida">Consumición</string>
    <string name="menu_crearbebida">Crear Bebida</string>
    <string name="menu_modificarbebida">Modificar Bebida</string>
    <string name="menu_historico">Resumen</string>
    <string name="menu_info">Info</string>
    <string name="menu_help">Ayuda</string>

    <string name="guardar_btn">Guardar</string>
    <string name="borrar_btn">Eliminar</string>

    <string name="tasa_main">Tasa Alcoholemia</string>

    <string name="name_hint">Nombre</string>
    <string name="edad_hint">Edad</string>
    <string name="peso_hint">Peso (kg)</string>
    <string name="altura_hint">Altura (cm)</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>

    <string name="name_bebida_hint">Nombre Bebida</string>
    <string name="tasa_bebida_hint">Tasa %</string>
    <string name="vol_bebida_hint">Volumen cl</string>
    <string name="precio_bebida_hint">Precio €</string>

    <string name="crear_bebida">Crear Bebida</string>
    <string name="tasa">0</string>
    <string name="gl">%</string>
    <string name="precio">0€</string>
    <string name="tiempo">Lapso: 6h</string>
    <string name="test">Test</string>
    <string name="seleccione_una_imagen">Seleccione una imagen</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Guardar</string>
    <string name="modificar">Modificar</string>
    <string name="toast_image">Debe seleccionar una bebida</string>
    <string name="si">SI</string>
    <string name="no">NO</string>

    <string name="todo">TODO</string>

    <string name="info">
        Cálculo aproximado de la tasa de alcoholemia. Control de gasto.\n\n
        Buzón de sugerencias: cuentacopas2023@gmail.com\n\n
        Versión 1.0.3\n
        PHPTRONIC\n
        Manuel Domínguez 2023\n
    </string>

    <string name="ayuda_tittle">Cuenta Copas</string>

    <string name="help">Una vez consumida una bebida pulse el botón +</string>

    <string name="help2">
        Elija una bebida de la lista y se mostrará la concentración de alcohol en sangre en el texto central\n\n
        El lapso de tiempo para reducir la tasa de alcohol es de 6 horas en condiciones óptimas, comiendo,
        bebiendo pausadamente y sin fumar, considere aumentar el lapso en otras condiciones.\n\n
        Puede crear y modificar sus propias bebidas, para ello use el botón del lapiz en el menú.\n
    </string>

    <string name="help3">
        Haga click en Crear Bebida para crear una nueva bebida, necesitará proporcionar su grado en
        alcohol, volumen en centilitros y su precio en euros.
    </string>

    <string name="help4">
        Para borrar una bebida simplemente pulse la papelera en la esquina superior derecha.
    </string>

    <string name="help5">
        Puede ver un histórico de todas las bebidas consumidas desde que instaló la aplicación en el icono resumen.\n
    </string>

    <string name="help6">
        No olvide modificar su perfil si ha ganado o perdido peso, el cálculo de la tasa se realiza en base a su edad, peso y altura.\n
    </string>

    <string name="version">versión</string>
    <string name="cerveza">cerveza</string>
    <string name="vino">vino</string>
    <string name="vermut">vermut</string>
    <string name="licor">licor</string>
    <string name="brandy">brandy</string>
    <string name="combinado">combinado</string>

    <string-array name="name_array">
        <item>Cerveza</item>
        <item>Vino</item>
        <item>Vermut</item>
        <item>Licor</item>
        <item>Brandy</item>
        <item>Combinado</item>
    </string-array>

    <string-array name="tasa_array">
        <item>5</item>
        <item>12</item>
        <item>15</item>
        <item>30</item>
        <item>38</item>
        <item>43</item>
    </string-array>

    <string-array name="volumen_array">
        <item>33</item>
        <item>10</item>
        <item>15</item>
        <item>10</item>
        <item>10</item>
        <item>6</item>
    </string-array>

    <string-array name="precio_array">
        <item>250</item>
        <item>240</item>
        <item>280</item>
        <item>250</item>
        <item>300</item>
        <item>700</item>
    </string-array>

    <string-array name="image_array">
        <item>cerveza</item>
        <item>vino</item>
        <item>vermut</item>
        <item>licor</item>
        <item>brandy</item>
        <item>combinado</item>
    </string-array>


</resources>