<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/menu_perfil"
        android:title="@string/menu_perfil" />

    <item android:id="@+id/menu_bebidas"
        android:title="@string/menu_bebidas" />

    <item android:id="@+id/menu_historico"
        android:title="@string/menu_historico" />

    <item android:id="@+id/menu_info"
        android:title="@string/menu_info" />


    <item
        android:id="@+id/icon_menu_perfil"
        android:title="@string/menu_perfil"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_my_calendar"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/icon_menu_bebidas"
        android:title="@string/menu_bebidas"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_edit"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/icon_menu_historico"
        android:title="@string/menu_historico"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_agenda"
        tools:ignore="AlwaysShowAction" />

</menu>