<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/ayuda_tittle"
                    android:textSize="24sp"
                    android:typeface="monospace" />

                <Button
                android:id="@+id/infoBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"

                android:background="@drawable/roundedbutton"
                android:onClick="runInfo"
                android:text="@string/version"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:justificationMode="inter_word"
                android:text="@string/help"
                android:textColor="@color/white"
                android:typeface="monospace" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/roundedbutton"
                android:onClick="addBebida"
                android:text="@string/addButton"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:enabled="false"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="@string/help2"
                android:textColor="@color/white"
                android:typeface="monospace" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:contentDescription="@string/help2"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="@string/help3"
                android:textColor="@color/white"
                android:typeface="monospace" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/help3"
                app:srcCompat="@drawable/papelera"
                tools:ignore="RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="@string/help4"
                android:textColor="@color/white"
                android:typeface="monospace" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:srcCompat="@android:drawable/ic_menu_agenda"
                android:contentDescription="@string/help5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="@string/help5"
                android:textColor="@color/white"
                android:typeface="monospace" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_my_calendar"
                android:contentDescription="@string/help4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:justificationMode="inter_word"
                android:text="@string/help6"
                android:textColor="@color/white"
                android:typeface="monospace" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>