<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00FFFFFF"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnPapelera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/borrar_btn"
            android:onClick="deleteBebida"

            android:scaleType="fitXY"
            app:srcCompat="@drawable/papelera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="#1C67B3"
                android:ems="10"
                android:hint="@string/name_bebida_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dip"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/tasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="#1C67B3"
                android:ems="10"
                android:hint="@string/tasa_bebida_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dip"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/volumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="#1C67B3"
                android:ems="10"
                android:hint="@string/vol_bebida_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dip"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="#1C67B3"
                android:ems="10"
                android:hint="@string/precio_bebida_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dip"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:id="@+id/imageViewBebida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="Cerveza"
                app:srcCompat="@drawable/cerveza"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textImageHelp"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:ems="10"
                android:minHeight="48dp"
                android:text="@string/seleccione_una_imagen"
                android:textColor="@color/white" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonCerveza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cerveza"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/radioButtonVino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vino"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/radioButtonVermu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vermut"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/radioButtonLicor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/licor"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/radioButtonBrandy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/brandy"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton
                    android:id="@+id/radioButtonCombinado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/combinado"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:text="@string/guardar"
                android:textColor="@color/white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:onClick="runCancelar"
                    android:textColor="@color/white"
                    android:text="@string/cancelar" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>